	PR debug/83480 	* toplev.c (process_options): Don't enable debug_nonbind_markers_p 	by default if flag_selective_schedling{,2}.  Formatting fixes.

* gcc.dg/pr83480.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@256309 138bc75d-0d04-0410-961f-82ee72b054a4